# nasa-hackaton

./: README.md  csv_parser.py  df_filtered.csv  plz_save_me.json  processos.py  pyproject.toml  sweetviz_report.html  table_class.py  test.py  uploaded_file.csv  values_to_id.py
Datasets/: line_visualization.json
Datasets/visualizations/: a_osd_379_line_visualization.json
app_base/: main.py  sweetviz_report.html  uploaded_file.csv
app_base/parser/: a_OSD-665_transcription-profiling_rna-sequencing-(rna-seq)_illumina.csv  s_OSD-665.csv  test.csv
app_base/services/: SupportVectorMachine.py  csv_parser.py  time_series.py
app_base/servicos/: SupportVectorMachine.py  csv_parser.py  data_loading.py  inference.py  multiple_linear_regression.py  processos.py  table_class.py  time_series.py  visualization.py
outputs/Dataset1/: s_OSD-379.csv
outputs/table_objects/: a_OSD-379_transcription-profiling_rna-sequencing-(rna-seq)_Illumina NovaSeq.json
streamlit/: app.py  data_loading.py  inference.py  visualization.py
streamlit/models/: multiple_linear_regression.py  table_class.py  time_series.py
streamlit/utils/: create_time_series.py  make_inference.py
