[tool.poetry]
name = "nasa-hackaton"
version = "0.1.0"
description = ""
authors = ["Rhuan Marques <rhuanleonardobm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
