[tool.poetry]
name = "nasa-hackaton"
version = "0.1.0"
description = ""
authors = ["Rhuan Marques <rhuanleonardobm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.9.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
streamlit = "^1.26.0"
statsmodels = "^0.14.4"
ydata-profiling = "^4.10.0"
sweetviz = "^2.3.1"
autoviz = "^0.1.905"
scipy = ">=1.4.1,<1.14"
setuptools = "^75.1.0"
ipython = "^8.28.0"
numpy = "1.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
